--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.androidApplication)
     alias(libs.plugins.jetbrainsKotlinAndroid)
+    id 'kotlin-kapt'
 }
 
 android {
@@ -30,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -42,4 +46,52 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+
+    //scalable unit text size
+    implementation libs.ssp.android
+
+    //scalable unit size
+    implementation libs.sdp.android
+
+    //circular
+    implementation libs.circleimageview
+    //Material Design
+    implementation libs.material
+
+    //nav
+    implementation libs.androidx.navigation.fragment.ktx
+    implementation libs.androidx.navigation.ui.ktx
+
+    //Lottie
+    implementation libs.lottie
+    //Picasso
+    implementation libs.picasso
+    //Glide
+    implementation libs.glide
+
+    //Retrofit
+    implementation libs.retrofit
+    implementation libs.converter.gson
+
+    //GSON
+    implementation libs.gson
+
+    //Room
+    implementation libs.androidx.room.ktx
+    implementation libs.androidx.room.runtime
+    kapt libs.androidx.room.compiler
+
+    //Coroutines
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.kotlinx.coroutines.android
+    implementation libs.kotlinx.coroutines.core
+
+    //ViewModel& livedata
+    implementation libs.androidx.lifecycle.extensions
+    implementation libs.androidx.lifecycle.viewmodel.ktx
+    implementation libs.androidx.lifecycle.livedata.ktx
+
+
+
+
 }
