splash screen & finish setting(GPS)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     //location
     implementation(libs.play.services.location.v2110)
 
+    implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha13"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha13"
+
 
 
 }
