--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,5 +104,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha13"
 
 
+    implementation libs.androidx.work.runtime.ktx
+
 
 }
